# our-personas

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  pyproject.toml  run-lint-md.sh  spec-driven.md
.devcontainer/: devcontainer.json
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh  generate-release-notes.sh
d-docs/: architecture.md  standards.md
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md
memory/: ground-rules.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  create-test-spec.sh  setup-arch.sh  setup-design.sh  setup-plan.sh  setup-test.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  create-test-spec.ps1  setup-arch.ps1  setup-design.ps1  setup-plan.ps1  setup-test.ps1  update-agent-context.ps1
src/personas_cli/: __init__.py
templates/: agent-file-template.md  checklist-arch-template.md  checklist-spec-template.md  checklist-template.md  design-template.md  plan-template.md  tasks-template.md  test-plan-template.md  test-report-template.md  test-spec-template.md  vscode-settings.json
templates/commands/: analyze.md  architect.md  checklist.md  clarify.md  constitution.md  design-test.md  design.md  implement.md  plan.md  regulate.md  specify.md  standardize.md  taskify.md  tasks.md  test-plan.md  test.md  validate-arch.md  validate-specs.md
