[project]
name = "personas-cli"
version = "0.0.20"
description = "Personas CLI, part of Our Personas (Organizing Us Rapidly). A tool to bootstrap your projects for Spec-Driven Development (SDD) and speed-up software development."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
personas = "personas_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personas_cli"]

